--- a/Harry_Potter/src/app/app.component.html
+++ b/Harry_Potter/src/app/app.component.html
@@ -1,12 +1,21 @@
-<div>
-  <nav>
-    <ul>
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/books">Books</a></li>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand mr-3" href="#">Harry Potter</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <!-- Usa solo routerLink per la navigazione -->
+        <a class="nav-link" [routerLink]="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <!-- Usa solo routerLink per la navigazione -->
+        <a class="nav-link" [routerLink]="/books">Personaggi</a>
+      </li>
     </ul>
-  </nav>
+  </div>
+</nav>
 
-
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
